--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -241,7 +241,10 @@ img {
 }
 
 /* Change background header */
-
+.bg-header {
+  background-color: var(--body-color);
+  box-shadow: 0 4px 8px hsla(180, 12%, 4%, .3);
+}
 
 /* Active link */
 
