--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -648,6 +648,27 @@ img {
   -moz-appearance: textfield;
 }
 
+.calculate__label {
+  position: absolute;
+  right: 1.5rem;
+  top: 1.25rem;
+  color: var(--title-color);
+}
+
+.calculate__form .button {
+  margin-top: 1.5rem;
+}
+
+.calculate__img {
+  width: 200px;
+  justify-self: center;
+}
+
+.calculate__message {
+  position: absolute;
+  transform: translateY(1rem);
+}
+
 /*=============== FOOTER ===============*/
 
 
