BMI input check

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -151,6 +151,14 @@ img {
   overflow: hidden; /* For animation ScrollReveal */
 }
 
+.color-red {
+  color: hsl(0, 80%, 64%);
+}
+
+.color-green {
+  color: var(--first-color);
+}
+
 /*=============== HEADER & NAV ===============*/
 .header {
   width: 100%;
