--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -255,7 +255,9 @@ img {
 }
 
 /* Active link */
-
+.active-link {
+  color: var(--first-color);
+}
 
 /*=============== HOME ===============*/
 .home {
